--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,15 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-http -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-http</artifactId>
+            <version>5.7.18</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
